build: apk 파일 빌드 #13 png 파일들 빌드 최적화 eas 빌드를 위한 세팅파일들 .json

--- a/mindy-demo/app.json
+++ b/mindy-demo/app.json
@@ -20,10 +20,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.jim777.mindydemo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f1c3500d-cf3d-437a-9f27-1d7707d6175f"
+      }
     }
   }
 }
